--- a/live-doc-ui/pom.xml
+++ b/live-doc-ui/pom.xml
@@ -12,57 +12,9 @@
     <artifactId>codeonline-live-doc-ui</artifactId>
     <name>CodeOnline Live Documentation UI</name>
 
-    <build>
-        <plugins>
-            <!-- TODO other VMs -->
-            <plugin>
-                <groupId>org.graalvm.aotjs</groupId>
-                <artifactId>aotjs-maven-plugin</artifactId>
-                <version>1.0-SNAPSHOT</version>
-                <executions>
-                    <execution>
-                        <id>generate-aotjs</id>
-                        <goals>
-                            <goal>aotjs</goal>
-                        </goals>
-                        <phase>package</phase>
-                        <configuration>
-                            <mainClass>com.oracle.graalvm.codeonline.LiveDoc</mainClass>
-                            <imageName>ui</imageName>
-                            <buildArgs>
-                                <buildArg>-H:-ClosureCompiler</buildArg>
-                                <buildArg>-H:+TraceServiceLoaderFeature</buildArg>
-                                <buildArg>-H:CompilerConfig=CONFIG_JUNIT_BROWSER</buildArg>
-                                <buildArg>--initialize-at-run-time=net.java.html.lib,com.oracle.graalvm.codeonline.editor.cm</buildArg>
-                            </buildArgs>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <version>3.2.0</version>
-                <executions>
-                    <execution>
-                        <id>attach-artifacts</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>attach-artifact</goal>
-                        </goals>
-                        <configuration>
-                            <artifacts>
-                                <artifact>
-                                    <file>${project.build.directory}/ui.js</file>
-                                    <type>js</type>
-                                </artifact>
-                            </artifacts>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+    <properties>
+        <codeonline.main.class>com.oracle.graalvm.codeonline.LiveDoc</codeonline.main.class>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -70,5 +22,142 @@
             <artifactId>codeonline-editor</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.graalvm.codeonline</groupId>
+            <artifactId>codeonline-build</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>aotjs</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.aotjs</groupId>
+                        <artifactId>aotjs-maven-plugin</artifactId>
+                        <version>1.0-SNAPSHOT</version>
+                        <executions>
+                            <execution>
+                                <id>generate-aotjs</id>
+                                <goals>
+                                    <goal>aotjs</goal>
+                                </goals>
+                                <phase>package</phase>
+                                <configuration>
+                                    <mainClass>${codeonline.main.class}</mainClass>
+                                    <outputDirectory>${project.build.directory}/aotjs</outputDirectory>
+                                    <imageName>codeonline</imageName>
+                                    <buildArgs>
+                                        <buildArg>-H:-ClosureCompiler</buildArg>
+                                        <buildArg>-H:+TraceServiceLoaderFeature</buildArg>
+                                        <buildArg>-H:CompilerConfig=CONFIG_JUNIT_BROWSER</buildArg>
+                                        <buildArg>--initialize-at-run-time=net.java.html.lib,com.oracle.graalvm.codeonline.editor.cm</buildArg>
+                                    </buildArgs>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <version>3.3.0</version>
+                        <executions>
+                            <execution>
+                                <id>assembly-aotjs</id>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                                <phase>package</phase>
+                                <configuration>
+                                    <descriptors>
+                                        <descriptor>src/main/assembly/aotjs.xml</descriptor>
+                                    </descriptors>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>bck2brwsr</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>3.0.0</version>
+                        <executions>
+                            <execution>
+                                <phase>generate-resources</phase>
+                                <id>generate-compiler-js</id>
+                                <goals>
+                                    <goal>java</goal>
+                                </goals>
+                                <configuration>
+                                    <mainClass>com.oracle.graalvm.codeonline.build.WriteFile</mainClass>
+                                    <classpathScope>compile</classpathScope>
+                                    <arguments>
+                                        <argument>${project.build.directory}/bck2brwsr/codeonline.js</argument>
+                                        <argument>(s => {</argument>
+                                        <argument>s.type = 'text/javascript';</argument>
+                                        <argument>s.src = 'bck2brwsr.js';</argument>
+                                        <argument>s.onload = e => bck2brwsr('codeonline-main.js').loadClass('${codeonline.main.class}', c => c.invoke('main'));</argument>
+                                        <argument>document.getElementsByTagName('head')[0].appendChild(s);</argument>
+                                        <argument>})(document.createElement('script'));</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apidesign.bck2brwsr</groupId>
+                        <artifactId>bck2brwsr-maven-plugin</artifactId>
+                        <version>1.0-SNAPSHOT</version>
+                        <executions>
+                            <execution>
+                                <id>b2b</id>
+                                <goals>
+                                    <goal>aot</goal>
+                                </goals>
+                                <phase>package</phase>
+                                <configuration>
+                                    <vm>${project.build.directory}/bck2brwsr/bck2brwsr.js</vm>
+                                    <mainJavaScript>${project.build.directory}/bck2brwsr/codeonline-main.js</mainJavaScript>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <version>3.3.0</version>
+                        <executions>
+                            <execution>
+                                <id>assembly-bck2brwsr</id>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                                <phase>package</phase>
+                                <configuration>
+                                    <descriptors>
+                                        <descriptor>src/main/assembly/bck2brwsr.xml</descriptor>
+                                    </descriptors>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
