--- a/compiler-nbjavac/pom.xml
+++ b/compiler-nbjavac/pom.xml
@@ -19,8 +19,8 @@
     <repositories>
         <repository>
             <id>netbeans</id>
-            <name>NetBeans</name>
-            <url>http://bits.netbeans.org/maven2/</url>
+            <name>NetBeans Archive</name>
+            <url>http://netbeans.apidesign.org/maven2/</url>
         </repository>
     </repositories>
 
