--- a/live-doc-base/pom.xml
+++ b/live-doc-base/pom.xml
@@ -174,7 +174,7 @@
                     <plugin>
                         <groupId>org.apidesign.bck2brwsr</groupId>
                         <artifactId>bck2brwsr-maven-plugin</artifactId>
-                        <version>1.0-SNAPSHOT</version>
+                        <version>0.52</version>
                         <executions>
                             <execution>
                                 <id>b2b</id>
