--- a/live-doc-base/pom.xml
+++ b/live-doc-base/pom.xml
@@ -101,6 +101,7 @@
                             <mainClass>com.oracle.graalvm.codeonline.build.GenerateSignatures</mainClass>
                             <classpathScope>compile</classpathScope>
                             <arguments>
+                                <argument>${project.build.outputDirectory}</argument>
                                 <argument>${codeonline.outputDirectory}/extres/</argument>
                                 <argument>${org.frgaal:compiler:jar}</argument>
                                 <argument>${codeonline.classpath}</argument>
