--- a/live-doc-debug/pom.xml
+++ b/live-doc-debug/pom.xml
@@ -52,6 +52,7 @@
                             <mainClass>com.oracle.graalvm.codeonline.build.GenerateSignatures</mainClass>
                             <classpathScope>compile</classpathScope>
                             <arguments combine.self="override">
+                                <argument>${project.build.outputDirectory}</argument>
                                 <argument>${project.build.directory}/classes/extres/</argument>
                                 <argument>${org.frgaal:compiler:jar}</argument>
                                 <argument>${codeonline.classpath}</argument>
